--- a/final_rmd/ML_paper.Rmd
+++ b/final_rmd/ML_paper.Rmd
@@ -15,7 +15,7 @@ The credit card business has entered a fast-rising development stage after an in
 
 \newpage
 
-```{r echo=FALSE,out.width = "100%", fig.pos="h"}
+```{r figs, echo=FALSE,fig.cap="\\label{fig:figs} Flowchart: process of experiment", fig.pos="h"}
 knitr::include_graphics("flowchart_overview.png")
 ```
 
